<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    tools:context=".ui.view.fragments.CreateRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:id="@+id/textLayoutLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_recipe"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <!-- Recipe Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginBottom="8dp"
            android:hint="@string/recipe_name">

            <EditText
                android:id="@+id/editTextRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:padding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Recipe Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginBottom="8dp"
            android:hint="@string/recipe_description">

            <EditText
                android:id="@+id/editTextRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Ingredient Selection -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:layout_marginBottom="8dp"
            android:hint="@string/select_ingredients">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:drawableEnd="@drawable/ic_dropdown"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:textSize="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Selected Ingredients -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSelectedIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="8dp"
            app:singleSelection="false" />

        <!-- Recipe Type -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/recipe_type"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Select a Category"
                android:padding="8dp"
                />

            <Spinner
                android:id="@+id/spinnerRecipeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"/>

<!--            <EditText-->
<!--                android:id="@+id/editTextRecipeType"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text"-->
<!--                android:padding="8dp"/>-->
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Instructions -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginBottom="8dp"
            android:hint="@string/instructions">

            <EditText
                android:id="@+id/editTextInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cooking Time -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginBottom="8dp"
            android:hint="@string/cooking_time">

            <EditText
                android:id="@+id/editTextCookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:padding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Image Selection -->
        <Button
            android:id="@+id/buttonSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:backgroundTint="@color/dark"
            android:layout_marginBottom="8dp"/>
        <ImageView
            android:id="@+id/imageViewSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:layout_marginBottom="16dp"/>

        <!-- Image List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Add Image Button -->
        <Button
            android:id="@+id/addImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/buttonSubmitRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
