<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginBottom="40dp"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="740dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewRecipe"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingBottom="8dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/buttonMarkFavorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_favorite"
                    android:contentDescription="@string/favorite"
                    app:tooltipText="@string/favorite"
                    android:background="?android:selectableItemBackgroundBorderless"/>

                <ImageButton
                    android:id="@+id/buttonUpdateRecipe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_edit"
                    android:contentDescription="@string/edit"
                    app:tooltipText="@string/edit"
                    android:background="?android:selectableItemBackgroundBorderless"/>

                <ImageButton
                    android:id="@+id/buttonDeleteRecipe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/delete"
                    app:tooltipText="@string/delete"
                    android:background="?android:selectableItemBackgroundBorderless"/>

                <ImageButton
                    android:id="@+id/buttonReviewRecipe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_review"
                    android:contentDescription="@string/review_recipe"
                    app:tooltipText="@string/review_recipe"
                    android:background="?android:selectableItemBackgroundBorderless"/>

                <ImageButton
                    android:id="@+id/buttonShareRecipe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_share"
                    android:contentDescription="@string/share"
                    app:tooltipText="@string/share"
                    android:background="?android:selectableItemBackgroundBorderless"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textDesp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/details"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textViewRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:justificationMode="inter_word" />

            <TextView
                android:id="@+id/textIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/ingredientsTxt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewRecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textFoodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/recipe_type"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFoodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/how_to_prepare"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewRecipeInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/textViewRecipeCookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/cooking_time"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipeImagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reviewRecipeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Write Your Review"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:id="@+id/reviewEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Write your review here"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:gravity="top"
                    android:padding="16dp"
                    android:background="@drawable/btn_background_1"
                    android:layout_marginBottom="16dp" />

                <Button
                    android:id="@+id/submitReviewButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Submit Review"
                    android:padding="16dp"
                    android:background="@color/black"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
</ScrollView>
