<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="0dp"
    tools:context=".ui.view.fragments.HomeFragment">

    <!-- top section with search and filter-->
    <include layout="@layout/top_section" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- search recipe results -->
            <TextView
                android:id="@+id/search_result_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_result"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:nestedScrollingEnabled="false" />

            <!-- Recent Recipes Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recent_recipes"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <!-- Making RecyclerView height wrap_content and not scrollable -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_recent_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:nestedScrollingEnabled="false" />

            <!-- All Recipes Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_posts"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_popular_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
